fixe title text out of bounds

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,7 @@ body {
     font-weight: bold;
 }
 
-/* .titlesmtxt {
-    -webkit-text-stroke: 4px #F0F7E1;
-    font-size: 7rem;
-} */
+
 
 .container.titlecon p {
     font-size: 1.3rem;
@@ -96,6 +93,10 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 400px;
+}
+
+.container.titlecon h1 {
+    font-size: 5rem;
 }
 
 /* Features Section */
